button to load a game state works
basically you can load the right regex so the game can load

--- a/src/app/chess-game/chess-game.component.html
+++ b/src/app/chess-game/chess-game.component.html
@@ -1,1 +1,7 @@
-<p>chess-game works!</p>
+<h2>Hello World: ngIf!</h2>
+
+<button (click)="onEditClick()">Magic!!! Come one!</button>
+
+<div *ngIf="canEdit">
+    <div id="board1" style="width: 25%"></div>
+</div>
