having a problem with calling Chess()

--- a/src/app/chessboard/chessboard.component.html
+++ b/src/app/chessboard/chessboard.component.html
@@ -1,2 +1,11 @@
-<div id="board1" style="width: 25%"></div>
-<app-chess-game></app-chess-game>
+<div id="board1" style="width: 400px"></div>
+<label>Status:</label>
+<div id="status"></div>
+<label>FEN:</label>
+<div id="fen"></div>
+<label>PGN:</label>
+<div id="pgn"></div>
+<button> click me</button>
+
+
+<!-- <app-chess-game></app-chess-game> -->
