--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,10 @@
 <!-- <h2 style="text-align: center;">Hello</h2> -->
 <!-- <script src="https://code.jquery.com/jquery-3.6.0.js"
 			  integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
-			  crossorigin="anonymous"> -->
+			  crossorigin="anonymous">
 
-<!-- <script src="jquery-3.6.0.js">
 </script> -->
-
+<!-- <script src="jquery-3.6.0.js"></script> -->
 <h2>Hello</h2>
 
 <app-chessboard></app-chessboard>
