--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,37 @@
 /* You can add global styles to this file, and also import other style files */
+.logo{
+    position: absolute;
+    top: .5rem;
+    left: .5rem;
+    width: 5rem;
+    height: 5rem;
+    border-radius: 100%;
+    overflow: hidden;
+}
+
+.logo::before{
+    content: "";
+    background-color: url(/assets/team-seas-logo.png);
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+}
+
+.logo::after {
+    content: '';
+    position: absolute;
+    width: 200%;
+    height: 200%;
+    background-color: hsla(0, 0%, 100%, .9);
+    bottom: 0;
+    left: -50%;
+    border-radius: 35%;
+    animation: waves 5s ease-in-out alternate infinite;
+}
+
+@keyframes waves {
+    to {
+        transform: translateY(50%) rotate(540deg);
+    }
+}
