working on chat and more about logo experiment

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,8 +5,7 @@
 
 </script> -->
 <!-- <script src="jquery-3.6.0.js"></script> -->
-<div class="landscape">
-
+<!-- <div class="landscape" >
 	<div class="mountain"></div>
 	<div class="mountain mountain-2"></div>
 	<div class="mountain mountain-3"></div>
@@ -48,7 +47,7 @@
 	  <div class="grass grass-2"></div>
 	  <div class="reed"></div>
 	  <div class="reed reed-1"></div>
-	</div>
-  </div>
 
+	</div>
+</div> -->
 <app-chessboard></app-chessboard>
