--- a/src/app/chessboard/chessboard.component.html
+++ b/src/app/chessboard/chessboard.component.html
@@ -1,5 +1,6 @@
 
 <div id="board1" style="width: 400px"></div>
+<h1>Debugging</h1>
 <label>Status:</label>
 <div id="status"></div>
 <label>FEN:</label>
@@ -7,6 +8,5 @@
 <label>PGN:</label>
 <div id="pgn"></div>
 
-
-
+<app-chat-box></app-chat-box>
 <!-- <app-chess-game></app-chess-game> -->
