adjust position of the chessboard

--- a/src/app/chessboard/chessboard.component.html
+++ b/src/app/chessboard/chessboard.component.html
@@ -1,12 +1,18 @@
 
-<div id="board1" style="width: 400px"></div>
-<h1>Debugging</h1>
-<label>Status:</label>
-<div id="status"></div>
-<label>FEN:</label>
-<div id="fen"></div>
-<label>PGN:</label>
-<div id="pgn"></div>
+<div class="test">
+    <div id="board1" class="chessboard"></div>
 
-<app-chat-box></app-chat-box>
+    <div class="box">
+        <h1>Debugging</h1>
+        <label>Status:</label>
+        <div id="status"></div>
+        <label>FEN:</label>
+        <div id="fen"></div>
+        <label>PGN:</label>
+        <div id="pgn"></div>    
+        <app-chat-box></app-chat-box>
+    </div>
+    
+</div>
+
 <!-- <app-chess-game></app-chess-game> -->
