--- a/src/app/chess-game/chess-game.component.html
+++ b/src/app/chess-game/chess-game.component.html
@@ -2,6 +2,8 @@
 
 <button (click)="onEditClick()">Magic!!! Come one!</button>
 
-<div *ngIf="canEdit">
-    <div id="board1" style="width: 25%"></div>
+<div>
+    <div *ngIf="canEdit">
+        <!-- <div id="board1" style="width: 50%"></div> -->
+    </div>
 </div>
