--- a/src/app/chat-box/chat-box.component.html
+++ b/src/app/chat-box/chat-box.component.html
@@ -1,1 +1,17 @@
 <p>chat-box works!</p>
+
+<div *ngFor="let message of messageList">
+    <li>
+        {{message}}
+    </li>
+</div>
+
+<!-- username -->
+<input [(ngModel)]="userName" (keyup)="$event.keyCode == 13 && setUsername()" />
+<button (click)="setUsername()" *ngIf="this.isButtonVisible" (click)="this.isButtonVisible = false">Submit Username</button>
+
+<!-- message -->
+<br>
+<br>
+<input [(ngModel)]="newMessage" (keyup)="$event.keyCode == 13 && sendMessage()"/>
+<button (click)="sendMessage()">Send</button>
