--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,53 +1,2 @@
-<!-- <h2 style="text-align: center;">Hello</h2> -->
-<!-- <script src="https://code.jquery.com/jquery-3.6.0.js"
-			  integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
-			  crossorigin="anonymous">
 
-</script> -->
-<!-- <script src="jquery-3.6.0.js"></script> -->
-<!-- <div class="landscape" >
-	<div class="mountain"></div>
-	<div class="mountain mountain-2"></div>
-	<div class="mountain mountain-3"></div>
-	<div class="sun-container sun-container-1">
-	</div>
-	<div class="sun-container">
-	  <div class="sun"></div>
-	</div>
-	<div class="cloud"></div>
-	<div class="cloud cloud-1"></div>
-	<div class="sun-container sun-container-reflection">
-	  <div class="sun"></div>
-	</div>
-	<div class="light"></div>
-	<div class="light light-1"></div>
-	<div class="light light-2"></div>
-	<div class="light light-3"></div>
-	<div class="light light-4"></div>
-	<div class="light light-5"></div>
-	<div class="light light-6"></div>
-	<div class="light light-7"></div>
-	<div class="water"></div>
-	<div class="splash"></div>
-	<div class="splash delay-1"></div>
-	<div class="splash delay-2"></div>
-	<div class="splash splash-4 delay-2"></div>
-	<div class="splash splash-4 delay-3"></div>
-	<div class="splash splash-4 delay-4"></div>
-	<div class="splash splash-stone delay-3"></div>
-	<div class="splash splash-stone splash-4"></div>
-	<div class="splash splash-stone splash-5"></div>
-	<div class="lotus lotus-1"></div>
-	<div class="lotus lotus-2"></div>
-	<div class="lotus lotus-3"></div>
-	<div class="front">
-	  <div class="stone"></div>
-	  <div class="grass"></div>
-	  <div class="grass grass-1"></div>
-	  <div class="grass grass-2"></div>
-	  <div class="reed"></div>
-	  <div class="reed reed-1"></div>
-
-	</div>
-</div> -->
-<app-chessboard class="test"></app-chessboard>
+<router-outlet></router-outlet>
